tests/errors/preprocessor/third_party_symbol.c
#eval (1 & 2)

void main()
{

}
